--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "type": "module",
+  "type": "module",  
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "18.x"
+  },
+  "_comment": "commit-helper: pin node version for Render",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -12,9 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.2.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.0",
+    "node-fetch": "^3.3.0"
   }
 }
